--- a/css/styles.css
+++ b/css/styles.css
@@ -7735,7 +7735,9 @@ fieldset:disabled .btn {
 
 .p-5 {
   padding: 1.5rem !important;
-  @media (min-width: 576px) {
+}
+@media (min-width: 576px) {
+  .p-5 {
     padding: 3rem !important;
   }
 }
@@ -7768,7 +7770,9 @@ fieldset:disabled .btn {
 .px-5 {
   padding-right: 1.5rem !important;
   padding-left: 1.5rem !important;
-  @media (min-width: 576px) {
+}
+@media (min-width: 576px) {
+  .px-5 {
     padding-right: 3rem !important;
     padding-left: 3rem !important;
   }
