--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,8 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-color: #fff;
+  --bs-body-bg: #212529;
 }
 
 *,
@@ -11730,7 +11730,7 @@ li::before {
   top: 5px;
   width: 10px;
   height: 10px;
-  background-color: #ff6600;
+  background-color: #fff;
   border-radius: 50%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
