--- a/css/styles.css
+++ b/css/styles.css
@@ -3960,6 +3960,34 @@ fieldset:disabled .btn {
   vertical-align: 0;
 }
 
+.absolute {
+  position: "absolute";
+}
+.text-over-image {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+.text-over-image h3 {
+  font-size: calc(1.475rem + 2.7vw);
+}
+@media (min-width: 1200px) {
+  .text-over-image h3 {
+    font-size: 3.5rem;
+    font-weight: 400;
+  }
+}
+.text-over-image span {
+  max-width: 400px;
+  font-size: 1.5rem;
+  padding: 0 10px;
+  word-break: break-word;
+  text-align: center;
+}
 .dropstart .dropdown-menu[data-bs-popper] {
   top: 0;
   right: 100%;
@@ -11652,6 +11680,31 @@ header.masthead {
   background-position: center center;
   background-attachment: scroll;
   background-size: cover;
+}
+.bg-lunch,
+.bg-dogs {
+  position: relative;
+  overflow: hidden;
+  background: url("../assets/img/lunch.jpeg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
+  height: 300px;
+}
+.bg-dogs:before,
+.bg-lunch:before {
+  background-color: rgba(0, 0, 0, 0.5);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.bg-lunch {
+  background-image: url("../assets/img/dogs.jpeg");
 }
 header.masthead.overlay:before {
   background-color: rgba(0, 0, 0, 0.5);
